[tool.poetry]
name = "vitari-random-quote-generator"
version = "0.1.0"
description = ""
authors = ["tandavala <tandavala.investidor@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
